--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4032346_9klx8j7j694.css">
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <style type="text/css">
-      .icon {
-         width: 1em; height: 1em; margin-right:6px;
-         vertical-align: -0.15em;
-         fill: currentColor;
-         overflow: hidden;
-      }
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4032346_9klx8j7j694.css">
+  <link rel="stylesheet" href="static/iconfont/iconfont.css">
+  </link>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <style type="text/css">
+    .icon {
+      width: 1em;
+      height: 1em;
+      margin-right: 6px;
+      vertical-align: -0.15em;
+      fill: currentColor;
+      overflow: hidden;
+    }
   </style>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
